[gd_scene load_steps=6 format=3 uid="uid://cphrfkogrejnv"]

[ext_resource type="Texture2D" uid="uid://ni5jege7y2i3" path="res://sprites/title-screen.png" id="1_4cfhs"]
[ext_resource type="Script" path="res://title_screen.gd" id="1_cl0qg"]
[ext_resource type="FontFile" uid="uid://dmx1er862ygnv" path="res://SRAFreePixelFontPack/PixelHigh.ttf" id="2_i8tjg"]
[ext_resource type="AudioStream" uid="uid://bc1rxaoqa4jb7" path="res://sound/title.ogg" id="4_8pid4"]
[ext_resource type="FontFile" uid="uid://bhd7rais7yn2q" path="res://SRAFreePixelFontPack/PixelMiddle.ttf" id="4_ibtm1"]

[node name="TitleScreen" type="Node"]
script = ExtResource("1_cl0qg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(240, 135)
texture = ExtResource("1_4cfhs")

[node name="Label" type="Label" parent="."]
offset_left = 72.0
offset_top = 27.0
offset_right = 352.0
offset_bottom = 254.0
theme_override_colors/font_color = Color(0.811765, 0.341176, 0.235294, 1)
theme_override_fonts/font = ExtResource("2_i8tjg")
theme_override_font_sizes/font_size = 80
text = "raptor 
strike"

[node name="subtext" type="Label" parent="."]
offset_left = 47.0
offset_top = 186.0
offset_right = 275.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0.811765, 0.341176, 0.235294, 1)
theme_override_fonts/font = ExtResource("2_i8tjg")
theme_override_font_sizes/font_size = 32
text = "Press Space to start"

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SubjectiveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8pid4")

[node name="Black" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0, 0, 0)

[node name="MissionObjective" type="Label" parent="."]
visible = false
offset_top = 39.0
offset_right = 480.0
offset_bottom = 211.0
theme_override_colors/font_color = Color(0.658824, 0.792157, 0.345098, 1)
theme_override_fonts/font = ExtResource("4_ibtm1")
theme_override_font_sizes/font_size = 64
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subjective" type="Label" parent="MissionObjective"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 42.0
offset_right = 482.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0.658824, 0.792157, 0.345098, 1)
theme_override_fonts/font = ExtResource("4_ibtm1")
theme_override_font_sizes/font_size = 32
text = "Destroy Enemy carrier"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="SubjectiveTimer" to="." method="_on_subjective_timer_timeout"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
